--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.1",
     "@next/eslint-plugin-next": "^15.5.2",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
